# advent-of-code

./: 2022-1.cc  2022day2.cc  2023day1.cc  2023day10.cc  2023day11.cc  2023day12.cc  2023day2.cc  2023day3.cc  2023day5.cc  2023day6.cc  2023day7.cc  2023day8.cc  2024day1.cc  2024day2.cc  2024day3.cc  2024day4.cc  2024day5.cc  BUILD  MODULE.bazel  WORKSPACE  out.txt  utils.cc  utils.h
2022/: 2022day2.cc  BUILD
2023/: 2023day11.cc  2023day4.cc  2023day9.cc  BUILD
2023/inputs/: 2023-day2.txt  2023-day3pt2-pairs.txt
2024/: 2024day1.cc  2024day2.cc  2024day3.cc  2024day4.cc  2024day5.cc  2024day6.cc  2024day7.cc  2024day8.cc  2024day9.cc  BUILD
2025/: 2025day1.cc  2025day2.cc  2025day3.cc  BUILD
inputs/: 2023-day3pt1-pairs.txt  2024-day4.txt
